--- a/src/main/resources/templates/vacancies/create.html
+++ b/src/main/resources/templates/vacancies/create.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="fragments/navigation :: navigation"></div>
 <div class="container">
-    <form class="mt-3">
+    <form class="mt-3" th:action="@{/vacancies/create}" method="post">
         <div class="mb-3">
             <label for="title" class="form-label"><b>Название</b></label>
             <input type="text" class="form-control" id="title"
